# AutoHomePlan

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  vcpkg.json
Assets/SceneGraph/: conflict.json  graph_in.dot  graph_out.dot  model.lp  output.json  test.json  test2.json
include/Components/: ConstraintAdder.h  GraphProcessor.h  InputScene.h  SceneGraph.h  Solver.h
include/GUI/: window.h
include/Shaders/: Shader.h
include/view/: Camera.h  Mesh.h  Model.h  SceneViewer.h  Shader.h
src/GUI/: main.cpp  window.cpp
src/Shaders/: Shader.cpp  basic.fs  basic.vs  fragment_shader.fs
src/Solver/: ConstraintAdder.cpp  GraphProcessor.cpp  Solver.cpp  main.cpp
src/demo/: Shader.cpp  main.cpp
src/view/: Camera.cpp  Mesh.cpp  Model.cpp  SceneViewer.cpp
